# iqrfsdk

./: .gitignore  COLLABORATION.txt  NOTICE.txt  README.md  README.txt
demos/autonetwork/c/: README.txt
demos/autonetwork/java/: README.txt  pom.xml
libs/arduino-spi-iqrf/ino/: IQRF.ino
libs/clouds/cloud-iqrf-examples/: nbactions.xml  pom.xml
libs/gemalto/spi/: README.txt
libs/iqrf/cdc-iqrf/: README.md
libs/iqrf/cdc-iqrf/c++/linux/: CMakeLists.txt
libs/iqrf/cdc-iqrf/c++/linux/example/: CMakeLists.txt  writeread.cpp
libs/iqrf/cdc-iqrf/c++/linux/include/cdc/: CDCMessageParser.h  CDCSendException.h  CdcInterface.h
libs/iqrf/cdc-iqrf/c++/linux/include/cdc_java/: com_microrisc_CDC_J_CDCImpl.h
libs/iqrf/cdc-iqrf/c++/linux/java/: CMakeLists.txt
libs/iqrf/cdc-iqrf/c++/linux/libcdc-example/nbproject/: Makefile-Debug.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
libs/iqrf/cdc-iqrf/c++/linux/libcdc-so/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
libs/iqrf/cdc-iqrf/c++/linux/libcdc-so/nbproject/private/: configurations.xml
libs/iqrf/cdc-iqrf/c++/linux/libcdc/h/cdc/: CDCImpl.h  CDCImplException.h  CDCMessageParserException.h  CDCReceiveException.h  CDCTypes.h
libs/iqrf/cdc-iqrf/c++/linux/libcdc/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Release.bash  configurations.xml
libs/iqrf/cdc-iqrf/c++/linux/src/: CDCMessageParser.cpp  CDCMessageParserException.cpp  CDCReceiveException.cpp
libs/iqrf/cdc-iqrf/c++/win/: CMakeLists.txt
libs/iqrf/cdc-iqrf/c++/win/example/: CMakeLists.txt
libs/iqrf/cdc-iqrf/c++/win/include/cdc/: CDCImplException.h  CDCMessageParser.h  CDCMessageParserException.h  CDCTypes.h  CdcInterface.h
libs/iqrf/cdc-iqrf/c++/win/libcdc/: libcdc.cbproj  libcdc.cbproj.local
libs/iqrf/cdc-iqrf/c++/win/libcdc-dll/: CDCLib_JavaStub.cbproj  CDCLib_JavaStub.cbproj.local
libs/iqrf/cdc-iqrf/c++/win/libcdc-dll/libs/: libcdc-1.0.1-win32.lib
libs/iqrf/cdc-iqrf/c++/win/libcdc-dll/src/: CDCLib_JavaStub.cpp  com_microrisc_CDC_J_CDCImpl.h
libs/iqrf/cdc-iqrf/c++/win/libcdc-example/: WriteRead.cbproj  WriteRead.cbproj.local  WriteRead.cpp
libs/iqrf/cdc-iqrf/c++/win/libcdc-example/__history/: WriteRead.cbproj.local.~1~
libs/iqrf/cdc-iqrf/c++/win/libcdc-example/libs/: libcdc-1.0.0-win32.lib
libs/iqrf/cdc-iqrf/c++/win/libcdc/include/cdc/: CDCImpl.h  CDCReceiveException.h  CDCSendException.h
libs/iqrf/cdc-iqrf/c++/win/libcdc/src/: CDCImpl.cpp  CDCImplException.cpp  CDCReceiveException.cpp
libs/iqrf/cdc-iqrf/c++/win/src/: CDCMessageParser.cpp  CDCMessageParserException.cpp  CDCSendException.cpp
libs/linux/: .gitignore  CMakeLists.txt  RPI-cross.cmake  build.sh
libs/linux/examples/: CMakeLists.txt
libs/linux/examples/io/io_example_button/: CMakeLists.txt  io_example_button.c
libs/linux/examples/spi/spiiqrf_example_writeread/: CMakeLists.txt  spiiqrf_example_writeread.c
libs/linux/include/: machines_def.h  spidev.h  sysfs_gpio.h
libs/linux/src/lib/dpa/: CMakeLists.txt  dpa.cpp  dpa_int.h
libs/mcu/dpa/: README.txt
libs/mcu/iqrf/: iqrf_library.c  iqrf_library.h  iqrf_pgm.c  iqrf_pgm.h
libs/mcu/spi-uart/: README.md  (+4 more)
libs/raspberry/: README.txt
libs/raspberry/c/armv7l/src/rpi/rpi_io/: CMakeLists.txt  Makefile  rpi_io.c
libs/raspberry/c/armv7l/src/rpi/rpi_spi_iqrf/: CMakeLists.txt  Makefile  rpi_spi_iqrf.c
libs/simply/: README.md
simply/AutoNetworkDemo/: nbactions.xml  pom.xml
simply/simply-asynchrony/: pom.xml
simply/simply-core/: pom.xml
simply/simply-iqrf/: pom.xml
simply/simply-iqrf-dpa/: pom.xml
simply/simply-iqrf-dpa-v201/: pom.xml
simply/simply-iqrf-dpa-v201-examples/: nbactions.xml  pom.xml
simply/simply-iqrf-dpa-v210/: pom.xml
simply/simply-iqrf-dpa-v210-examples/: nb-configuration.xml  nbactions.xml  pom.xml
simply/simply-iqrf-dpa-v220/: nb-configuration.xml  nbactions.xml  pom.xml
simply/simply-iqrf-dpa-v220-examples/: nbactions.xml  pom.xml
simply/simply-network-serial-v1/: pom.xml
simply/simply-network-serial-v2/: pom.xml
simply/simply-network-spi/: pom.xml
simply/simply-network-udp/: pom.xml
simply/simply-network-usbcdc/: pom.xml
(+2995 files in other folders)
